# scope3-emissions-mvp

./: .gitignore  DEPLOYMENT.md  docker-compose.yml  kb_store.db
ai-ml/: .dockerignore  .env.development  .gitignore  Dockerfile.ai-ml  README.md  app.py  docker-compose.yml  main.py  requirements.txt  run.py  setup.cfg  test_weaviate.py
ai-ml/agents/data_insight_agent/: Dockerfile  app.py  db_utils.py  llm_utils.py
ai-ml/agents/narrative_agent/: app.py
ai-ml/inference/: embedding_manager.py  langchain_service.py  predict.py  predict_api.py  query_service.py  weaviate_client.py  weaviate_metadata.py
ai-ml/kb/: combined_scope3_knowledge.txt
ai-ml/models/: combined_clean_embeddings.json  combined_embeddings.json
ai-ml/models/faiss_index/: index.faiss  index.pkl
ai-ml/models/generated_data/: business_travel.csv  employee_commuting.csv  transportation.csv  waste_generated.csv
ai-ml/scripts/: add_document.py  crawl_web.py  extract_pdf.py  generate_clean_embeddings.py  generate_embeddings.py  inspect_faiss_index.py  startup.sh
ai-ml/scripts/windows/: README.md  clean.bat  cleanup.bat  fix_common_issues.bat  run_tests.bat  setup.bat  setup_env.bat  setup_neo4j.bat  start_dev.bat  start_rag_api.bat  validate.bat  validate.py  verify_neo4j.bat  verify_paths.bat  verify_paths.py
ai-ml/src/: __init__.py
ai-ml/src/config/: __init__.py  config_loader.py  default.py  llm_config.yaml  moe_config.yaml  retrieval_config.yaml
ai-ml/src/monitoring/: monitor.py
ai-ml/src/rag/: __init__.py  (+1 more)
ai-ml/test_data/: scope3_example.txt
ai-ml/tests/: conftest.py  test_app.py
(+194 files in other folders)
