[metadata]
name = scope3-rag
version = 1.0.0
description = Advanced RAG system for Scope3 emissions analysis
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    flask==2.0.1
    flask-cors==3.0.10
    flask-restx==1.1.0
    gunicorn==20.1.0
    python-dotenv==0.19.0
    numpy==1.21.0
    pandas==1.3.0
    scikit-learn==0.24.2
    torch==1.9.0
    transformers==4.9.2
    sentence-transformers==2.2.2
    faiss-cpu==1.7.1
    networkx==2.6.3
    rank-bm25>=0.2.2
    PyPDF2
    prometheus-client==0.14.1
    python-json-logger==2.0.7

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    isort>=5.0
    mypy>=0.900
    flake8>=3.9
    
[flake8]
max-line-length = 88
extend-ignore = E203